--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@ body{
   margin:0;
 }
    a {
-      color:black;
-  }
+      color:none;
+   }
   h1 {
     font-size: 45px;
     text-align: center;
-    border-bottom:1px solid gray;
+    border-bottom: 1px solid gray;
     margin:0;
     padding:33px;
   }
   ol{
-    border-right:1px solid gray;
+    border-right:1px solid #222;
     width:100px;
     margin:0px;
     padding:20px;
